// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status Page After 5 seconds waiting for a response, the request should timeout and show an alert icon 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="status-page-container"
      >
        <h1
          class="page-title"
          data-testid="title"
        >
          Status Page
        </h1>
        <div
          class="Datatable Datatable--density-default"
        >
          <table
            aria-rowcount="2"
            class="Datatable__table Datatable__table--col-fixed"
          >
            <colgroup>
              <col
                style="width: 33.333333333333336%;"
              />
              <col
                style="width: 50%;"
              />
              <col
                style="width: 16.666666666666668%;"
              />
            </colgroup>
            <thead
              class="Datatable__header"
            >
              <tr
                role="row"
              >
                <th
                  aria-sort="none"
                  class="header__cell Datatable__cell"
                  role="columnheader"
                  scope="col"
                >
                  <div
                    class="header__name"
                  >
                    Service Name
                  </div>
                </th>
                <th
                  aria-sort="none"
                  class="header__cell Datatable__cell"
                  role="columnheader"
                  scope="col"
                >
                  <div
                    class="header__name"
                  >
                    Endpoint
                  </div>
                </th>
                <th
                  aria-sort="none"
                  class="header__cell Datatable__cell"
                  role="columnheader"
                  scope="col"
                >
                  <div
                    class="header__name"
                  >
                    <div>
                      <strong>
                        Status
                         
                      </strong>
                      <div
                        class=""
                        role="button"
                        style="display: inline-block; outline: 0; position: relative;"
                        tabindex="0"
                      >
                         
                        <span
                          class="SVGIcon SVGIcon--16px"
                        >
                          <svg
                            data-id="SVG_INFO__16"
                            focusable="false"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              fill-rule="evenodd"
                            >
                              <path
                                d="M7.1 5A.9.9 0 1 1 9 5 .9.9 0 0 1 7 5"
                                fill="currentColor"
                                stroke="none"
                              />
                              <path
                                d="M8 11.2V7.3M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8z"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                              />
                            </g>
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              class="Datatable__body"
            >
              <tr
                class="Datatable__row"
              >
                <td
                  class="row__cell Datatable__cell"
                >
                  <a
                    class="serviceName"
                    href="https://spawg-dp.expedia.biz/dashboards/eg-fci-data-service/state/"
                    target="_blank"
                  >
                    eg-fci-data-service
                  </a>
                  <a
                    class="serviceName"
                    href="https://github.expedia.biz/eg-reo-opex/eg-fci-data-service"
                    target="_blank"
                  >
                    <img
                      alt="github"
                      height="24"
                      title="github"
                      width="24"
                    />
                  </a>
                </td>
                <td
                  class="row__cell Datatable__cell"
                >
                  <a
                    class="serviceName"
                    href="https://opxhub-ui.us-east-1.prod.expedia.com/v1/checkout-failures/sites?from=2021-10-26T16:53:00Z&to=2021-10-26T16:53:06Z"
                    target="_blank"
                  >
                    /v1/checkout-failures/sites
                  </a>
                </td>
                <td
                  class="row__cell Datatable__cell"
                >
                  <div
                    data-testid="failIcon"
                  >
                    <span
                      class="SVGIcon SVGIcon--24px fail-icon"
                    >
                      <svg
                        data-id="SVG_ALERT__24"
                        focusable="false"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                        >
                          <path
                            d="M13 16a1 1 0 1 1-2 0 1 1 0 0 1 2 0"
                            fill="currentColor"
                            stroke="none"
                          />
                          <path
                            d="M12 7.8v5.1m9.3-.9a9.3 9.3 0 1 1-18.6 0 9.3 9.3 0 0 1 18.6 0z"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </g>
                      </svg>
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="Datatable__row"
              >
                <td
                  class="row__cell Datatable__cell"
                >
                  <a
                    class="serviceName"
                    href="https://spinnaker.expedia.biz/#/applications/opxhub-data-service/executions/"
                    target="_blank"
                  >
                    opxhub-data-service
                  </a>
                  <a
                    class="serviceName"
                    href="https://github.expedia.biz/eg-reo-opex/opxhub-data-service"
                    target="_blank"
                  >
                    <img
                      alt="github"
                      height="24"
                      title="github"
                      width="24"
                    />
                  </a>
                </td>
                <td
                  class="row__cell Datatable__cell"
                >
                  <a
                    class="serviceName"
                    href="https://opxhub-ui.us-east-1.prod.expedia.com/v1/incidents?from_datetime=2021-10-28T05:31:00Z&to_datetime=2021-10-28T16:31:00Z"
                    target="_blank"
                  >
                    /v1/incidents
                  </a>
                </td>
                <td
                  class="row__cell Datatable__cell"
                >
                  <div
                    data-testid="failIcon"
                  >
                    <span
                      class="SVGIcon SVGIcon--24px fail-icon"
                    >
                      <svg
                        data-id="SVG_ALERT__24"
                        focusable="false"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                        >
                          <path
                            d="M13 16a1 1 0 1 1-2 0 1 1 0 0 1 2 0"
                            fill="currentColor"
                            stroke="none"
                          />
                          <path
                            d="M12 7.8v5.1m9.3-.9a9.3 9.3 0 1 1-18.6 0 9.3 9.3 0 0 1 18.6 0z"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </g>
                      </svg>
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="status-page-container"
    >
      <h1
        class="page-title"
        data-testid="title"
      >
        Status Page
      </h1>
      <div
        class="Datatable Datatable--density-default"
      >
        <table
          aria-rowcount="2"
          class="Datatable__table Datatable__table--col-fixed"
        >
          <colgroup>
            <col
              style="width: 33.333333333333336%;"
            />
            <col
              style="width: 50%;"
            />
            <col
              style="width: 16.666666666666668%;"
            />
          </colgroup>
          <thead
            class="Datatable__header"
          >
            <tr
              role="row"
            >
              <th
                aria-sort="none"
                class="header__cell Datatable__cell"
                role="columnheader"
                scope="col"
              >
                <div
                  class="header__name"
                >
                  Service Name
                </div>
              </th>
              <th
                aria-sort="none"
                class="header__cell Datatable__cell"
                role="columnheader"
                scope="col"
              >
                <div
                  class="header__name"
                >
                  Endpoint
                </div>
              </th>
              <th
                aria-sort="none"
                class="header__cell Datatable__cell"
                role="columnheader"
                scope="col"
              >
                <div
                  class="header__name"
                >
                  <div>
                    <strong>
                      Status
                       
                    </strong>
                    <div
                      class=""
                      role="button"
                      style="display: inline-block; outline: 0; position: relative;"
                      tabindex="0"
                    >
                       
                      <span
                        class="SVGIcon SVGIcon--16px"
                      >
                        <svg
                          data-id="SVG_INFO__16"
                          focusable="false"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            fill="none"
                            fill-rule="evenodd"
                          >
                            <path
                              d="M7.1 5A.9.9 0 1 1 9 5 .9.9 0 0 1 7 5"
                              fill="currentColor"
                              stroke="none"
                            />
                            <path
                              d="M8 11.2V7.3M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8z"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                            />
                          </g>
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            class="Datatable__body"
          >
            <tr
              class="Datatable__row"
            >
              <td
                class="row__cell Datatable__cell"
              >
                <a
                  class="serviceName"
                  href="https://spawg-dp.expedia.biz/dashboards/eg-fci-data-service/state/"
                  target="_blank"
                >
                  eg-fci-data-service
                </a>
                <a
                  class="serviceName"
                  href="https://github.expedia.biz/eg-reo-opex/eg-fci-data-service"
                  target="_blank"
                >
                  <img
                    alt="github"
                    height="24"
                    title="github"
                    width="24"
                  />
                </a>
              </td>
              <td
                class="row__cell Datatable__cell"
              >
                <a
                  class="serviceName"
                  href="https://opxhub-ui.us-east-1.prod.expedia.com/v1/checkout-failures/sites?from=2021-10-26T16:53:00Z&to=2021-10-26T16:53:06Z"
                  target="_blank"
                >
                  /v1/checkout-failures/sites
                </a>
              </td>
              <td
                class="row__cell Datatable__cell"
              >
                <div
                  data-testid="failIcon"
                >
                  <span
                    class="SVGIcon SVGIcon--24px fail-icon"
                  >
                    <svg
                      data-id="SVG_ALERT__24"
                      focusable="false"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                        fill-rule="evenodd"
                      >
                        <path
                          d="M13 16a1 1 0 1 1-2 0 1 1 0 0 1 2 0"
                          fill="currentColor"
                          stroke="none"
                        />
                        <path
                          d="M12 7.8v5.1m9.3-.9a9.3 9.3 0 1 1-18.6 0 9.3 9.3 0 0 1 18.6 0z"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="Datatable__row"
            >
              <td
                class="row__cell Datatable__cell"
              >
                <a
                  class="serviceName"
                  href="https://spinnaker.expedia.biz/#/applications/opxhub-data-service/executions/"
                  target="_blank"
                >
                  opxhub-data-service
                </a>
                <a
                  class="serviceName"
                  href="https://github.expedia.biz/eg-reo-opex/opxhub-data-service"
                  target="_blank"
                >
                  <img
                    alt="github"
                    height="24"
                    title="github"
                    width="24"
                  />
                </a>
              </td>
              <td
                class="row__cell Datatable__cell"
              >
                <a
                  class="serviceName"
                  href="https://opxhub-ui.us-east-1.prod.expedia.com/v1/incidents?from_datetime=2021-10-28T05:31:00Z&to_datetime=2021-10-28T16:31:00Z"
                  target="_blank"
                >
                  /v1/incidents
                </a>
              </td>
              <td
                class="row__cell Datatable__cell"
              >
                <div
                  data-testid="failIcon"
                >
                  <span
                    class="SVGIcon SVGIcon--24px fail-icon"
                  >
                    <svg
                      data-id="SVG_ALERT__24"
                      focusable="false"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                        fill-rule="evenodd"
                      >
                        <path
                          d="M13 16a1 1 0 1 1-2 0 1 1 0 0 1 2 0"
                          fill="currentColor"
                          stroke="none"
                        />
                        <path
                          d="M12 7.8v5.1m9.3-.9a9.3 9.3 0 1 1-18.6 0 9.3 9.3 0 0 1 18.6 0z"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Status Page renders fail icon when incorrect response data doesn't match 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="status-page-container"
      >
        <h1
          class="page-title"
          data-testid="title"
        >
          Status Page
        </h1>
        <div
          class="Datatable Datatable--density-default"
        >
          <table
            aria-rowcount="2"
            class="Datatable__table Datatable__table--col-fixed"
          >
            <colgroup>
              <col
                style="width: 33.333333333333336%;"
              />
              <col
                style="width: 50%;"
              />
              <col
                style="width: 16.666666666666668%;"
              />
            </colgroup>
            <thead
              class="Datatable__header"
            >
              <tr
                role="row"
              >
                <th
                  aria-sort="none"
                  class="header__cell Datatable__cell"
                  role="columnheader"
                  scope="col"
                >
                  <div
                    class="header__name"
                  >
                    Service Name
                  </div>
                </th>
                <th
                  aria-sort="none"
                  class="header__cell Datatable__cell"
                  role="columnheader"
                  scope="col"
                >
                  <div
                    class="header__name"
                  >
                    Endpoint
                  </div>
                </th>
                <th
                  aria-sort="none"
                  class="header__cell Datatable__cell"
                  role="columnheader"
                  scope="col"
                >
                  <div
                    class="header__name"
                  >
                    <div>
                      <strong>
                        Status
                         
                      </strong>
                      <div
                        class=""
                        role="button"
                        style="display: inline-block; outline: 0; position: relative;"
                        tabindex="0"
                      >
                         
                        <span
                          class="SVGIcon SVGIcon--16px"
                        >
                          <svg
                            data-id="SVG_INFO__16"
                            focusable="false"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              fill-rule="evenodd"
                            >
                              <path
                                d="M7.1 5A.9.9 0 1 1 9 5 .9.9 0 0 1 7 5"
                                fill="currentColor"
                                stroke="none"
                              />
                              <path
                                d="M8 11.2V7.3M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8z"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                              />
                            </g>
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              class="Datatable__body"
            >
              <tr
                class="Datatable__row"
              >
                <td
                  class="row__cell Datatable__cell"
                >
                  <a
                    class="serviceName"
                    href="https://spawg-dp.expedia.biz/dashboards/eg-fci-data-service/state/"
                    target="_blank"
                  >
                    eg-fci-data-service
                  </a>
                  <a
                    class="serviceName"
                    href="https://github.expedia.biz/eg-reo-opex/eg-fci-data-service"
                    target="_blank"
                  >
                    <img
                      alt="github"
                      height="24"
                      title="github"
                      width="24"
                    />
                  </a>
                </td>
                <td
                  class="row__cell Datatable__cell"
                >
                  <a
                    class="serviceName"
                    href="https://opxhub-ui.us-east-1.prod.expedia.com/v1/checkout-failures/sites?from=2021-10-26T16:53:00Z&to=2021-10-26T16:53:06Z"
                    target="_blank"
                  >
                    /v1/checkout-failures/sites
                  </a>
                </td>
                <td
                  class="row__cell Datatable__cell"
                >
                  <div
                    data-testid="failIcon"
                  >
                    <span
                      class="SVGIcon SVGIcon--24px fail-icon"
                    >
                      <svg
                        data-id="SVG_ALERT__24"
                        focusable="false"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                        >
                          <path
                            d="M13 16a1 1 0 1 1-2 0 1 1 0 0 1 2 0"
                            fill="currentColor"
                            stroke="none"
                          />
                          <path
                            d="M12 7.8v5.1m9.3-.9a9.3 9.3 0 1 1-18.6 0 9.3 9.3 0 0 1 18.6 0z"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </g>
                      </svg>
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="Datatable__row"
              >
                <td
                  class="row__cell Datatable__cell"
                >
                  <a
                    class="serviceName"
                    href="https://spinnaker.expedia.biz/#/applications/opxhub-data-service/executions/"
                    target="_blank"
                  >
                    opxhub-data-service
                  </a>
                  <a
                    class="serviceName"
                    href="https://github.expedia.biz/eg-reo-opex/opxhub-data-service"
                    target="_blank"
                  >
                    <img
                      alt="github"
                      height="24"
                      title="github"
                      width="24"
                    />
                  </a>
                </td>
                <td
                  class="row__cell Datatable__cell"
                >
                  <a
                    class="serviceName"
                    href="https://opxhub-ui.us-east-1.prod.expedia.com/v1/incidents?from_datetime=2021-10-28T05:31:00Z&to_datetime=2021-10-28T16:31:00Z"
                    target="_blank"
                  >
                    /v1/incidents
                  </a>
                </td>
                <td
                  class="row__cell Datatable__cell"
                >
                  <div
                    data-testid="failIcon"
                  >
                    <span
                      class="SVGIcon SVGIcon--24px fail-icon"
                    >
                      <svg
                        data-id="SVG_ALERT__24"
                        focusable="false"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                        >
                          <path
                            d="M13 16a1 1 0 1 1-2 0 1 1 0 0 1 2 0"
                            fill="currentColor"
                            stroke="none"
                          />
                          <path
                            d="M12 7.8v5.1m9.3-.9a9.3 9.3 0 1 1-18.6 0 9.3 9.3 0 0 1 18.6 0z"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </g>
                      </svg>
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="status-page-container"
    >
      <h1
        class="page-title"
        data-testid="title"
      >
        Status Page
      </h1>
      <div
        class="Datatable Datatable--density-default"
      >
        <table
          aria-rowcount="2"
          class="Datatable__table Datatable__table--col-fixed"
        >
          <colgroup>
            <col
              style="width: 33.333333333333336%;"
            />
            <col
              style="width: 50%;"
            />
            <col
              style="width: 16.666666666666668%;"
            />
          </colgroup>
          <thead
            class="Datatable__header"
          >
            <tr
              role="row"
            >
              <th
                aria-sort="none"
                class="header__cell Datatable__cell"
                role="columnheader"
                scope="col"
              >
                <div
                  class="header__name"
                >
                  Service Name
                </div>
              </th>
              <th
                aria-sort="none"
                class="header__cell Datatable__cell"
                role="columnheader"
                scope="col"
              >
                <div
                  class="header__name"
                >
                  Endpoint
                </div>
              </th>
              <th
                aria-sort="none"
                class="header__cell Datatable__cell"
                role="columnheader"
                scope="col"
              >
                <div
                  class="header__name"
                >
                  <div>
                    <strong>
                      Status
                       
                    </strong>
                    <div
                      class=""
                      role="button"
                      style="display: inline-block; outline: 0; position: relative;"
                      tabindex="0"
                    >
                       
                      <span
                        class="SVGIcon SVGIcon--16px"
                      >
                        <svg
                          data-id="SVG_INFO__16"
                          focusable="false"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            fill="none"
                            fill-rule="evenodd"
                          >
                            <path
                              d="M7.1 5A.9.9 0 1 1 9 5 .9.9 0 0 1 7 5"
                              fill="currentColor"
                              stroke="none"
                            />
                            <path
                              d="M8 11.2V7.3M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8z"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                            />
                          </g>
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            class="Datatable__body"
          >
            <tr
              class="Datatable__row"
            >
              <td
                class="row__cell Datatable__cell"
              >
                <a
                  class="serviceName"
                  href="https://spawg-dp.expedia.biz/dashboards/eg-fci-data-service/state/"
                  target="_blank"
                >
                  eg-fci-data-service
                </a>
                <a
                  class="serviceName"
                  href="https://github.expedia.biz/eg-reo-opex/eg-fci-data-service"
                  target="_blank"
                >
                  <img
                    alt="github"
                    height="24"
                    title="github"
                    width="24"
                  />
                </a>
              </td>
              <td
                class="row__cell Datatable__cell"
              >
                <a
                  class="serviceName"
                  href="https://opxhub-ui.us-east-1.prod.expedia.com/v1/checkout-failures/sites?from=2021-10-26T16:53:00Z&to=2021-10-26T16:53:06Z"
                  target="_blank"
                >
                  /v1/checkout-failures/sites
                </a>
              </td>
              <td
                class="row__cell Datatable__cell"
              >
                <div
                  data-testid="failIcon"
                >
                  <span
                    class="SVGIcon SVGIcon--24px fail-icon"
                  >
                    <svg
                      data-id="SVG_ALERT__24"
                      focusable="false"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                        fill-rule="evenodd"
                      >
                        <path
                          d="M13 16a1 1 0 1 1-2 0 1 1 0 0 1 2 0"
                          fill="currentColor"
                          stroke="none"
                        />
                        <path
                          d="M12 7.8v5.1m9.3-.9a9.3 9.3 0 1 1-18.6 0 9.3 9.3 0 0 1 18.6 0z"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="Datatable__row"
            >
              <td
                class="row__cell Datatable__cell"
              >
                <a
                  class="serviceName"
                  href="https://spinnaker.expedia.biz/#/applications/opxhub-data-service/executions/"
                  target="_blank"
                >
                  opxhub-data-service
                </a>
                <a
                  class="serviceName"
                  href="https://github.expedia.biz/eg-reo-opex/opxhub-data-service"
                  target="_blank"
                >
                  <img
                    alt="github"
                    height="24"
                    title="github"
                    width="24"
                  />
                </a>
              </td>
              <td
                class="row__cell Datatable__cell"
              >
                <a
                  class="serviceName"
                  href="https://opxhub-ui.us-east-1.prod.expedia.com/v1/incidents?from_datetime=2021-10-28T05:31:00Z&to_datetime=2021-10-28T16:31:00Z"
                  target="_blank"
                >
                  /v1/incidents
                </a>
              </td>
              <td
                class="row__cell Datatable__cell"
              >
                <div
                  data-testid="failIcon"
                >
                  <span
                    class="SVGIcon SVGIcon--24px fail-icon"
                  >
                    <svg
                      data-id="SVG_ALERT__24"
                      focusable="false"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                        fill-rule="evenodd"
                      >
                        <path
                          d="M13 16a1 1 0 1 1-2 0 1 1 0 0 1 2 0"
                          fill="currentColor"
                          stroke="none"
                        />
                        <path
                          d="M12 7.8v5.1m9.3-.9a9.3 9.3 0 1 1-18.6 0 9.3 9.3 0 0 1 18.6 0z"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Status Page renders success icon when correct response data matches 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="status-page-container"
      >
        <h1
          class="page-title"
          data-testid="title"
        >
          Status Page
        </h1>
        <div
          class="Datatable Datatable--density-default"
        >
          <table
            aria-rowcount="2"
            class="Datatable__table Datatable__table--col-fixed"
          >
            <colgroup>
              <col
                style="width: 33.333333333333336%;"
              />
              <col
                style="width: 50%;"
              />
              <col
                style="width: 16.666666666666668%;"
              />
            </colgroup>
            <thead
              class="Datatable__header"
            >
              <tr
                role="row"
              >
                <th
                  aria-sort="none"
                  class="header__cell Datatable__cell"
                  role="columnheader"
                  scope="col"
                >
                  <div
                    class="header__name"
                  >
                    Service Name
                  </div>
                </th>
                <th
                  aria-sort="none"
                  class="header__cell Datatable__cell"
                  role="columnheader"
                  scope="col"
                >
                  <div
                    class="header__name"
                  >
                    Endpoint
                  </div>
                </th>
                <th
                  aria-sort="none"
                  class="header__cell Datatable__cell"
                  role="columnheader"
                  scope="col"
                >
                  <div
                    class="header__name"
                  >
                    <div>
                      <strong>
                        Status
                         
                      </strong>
                      <div
                        class=""
                        role="button"
                        style="display: inline-block; outline: 0; position: relative;"
                        tabindex="0"
                      >
                         
                        <span
                          class="SVGIcon SVGIcon--16px"
                        >
                          <svg
                            data-id="SVG_INFO__16"
                            focusable="false"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              fill-rule="evenodd"
                            >
                              <path
                                d="M7.1 5A.9.9 0 1 1 9 5 .9.9 0 0 1 7 5"
                                fill="currentColor"
                                stroke="none"
                              />
                              <path
                                d="M8 11.2V7.3M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8z"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                              />
                            </g>
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              class="Datatable__body"
            >
              <tr
                class="Datatable__row"
              >
                <td
                  class="row__cell Datatable__cell"
                >
                  <a
                    class="serviceName"
                    href="https://spawg-dp.expedia.biz/dashboards/eg-fci-data-service/state/"
                    target="_blank"
                  >
                    eg-fci-data-service
                  </a>
                  <a
                    class="serviceName"
                    href="https://github.expedia.biz/eg-reo-opex/eg-fci-data-service"
                    target="_blank"
                  >
                    <img
                      alt="github"
                      height="24"
                      title="github"
                      width="24"
                    />
                  </a>
                </td>
                <td
                  class="row__cell Datatable__cell"
                >
                  <a
                    class="serviceName"
                    href="https://opxhub-ui.us-east-1.prod.expedia.com/v1/checkout-failures/sites?from=2021-10-26T16:53:00Z&to=2021-10-26T16:53:06Z"
                    target="_blank"
                  >
                    /v1/checkout-failures/sites
                  </a>
                </td>
                <td
                  class="row__cell Datatable__cell"
                >
                  <div
                    data-testid="failIcon"
                  >
                    <span
                      class="SVGIcon SVGIcon--24px fail-icon"
                    >
                      <svg
                        data-id="SVG_ALERT__24"
                        focusable="false"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                        >
                          <path
                            d="M13 16a1 1 0 1 1-2 0 1 1 0 0 1 2 0"
                            fill="currentColor"
                            stroke="none"
                          />
                          <path
                            d="M12 7.8v5.1m9.3-.9a9.3 9.3 0 1 1-18.6 0 9.3 9.3 0 0 1 18.6 0z"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </g>
                      </svg>
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="Datatable__row"
              >
                <td
                  class="row__cell Datatable__cell"
                >
                  <a
                    class="serviceName"
                    href="https://spinnaker.expedia.biz/#/applications/opxhub-data-service/executions/"
                    target="_blank"
                  >
                    opxhub-data-service
                  </a>
                  <a
                    class="serviceName"
                    href="https://github.expedia.biz/eg-reo-opex/opxhub-data-service"
                    target="_blank"
                  >
                    <img
                      alt="github"
                      height="24"
                      title="github"
                      width="24"
                    />
                  </a>
                </td>
                <td
                  class="row__cell Datatable__cell"
                >
                  <a
                    class="serviceName"
                    href="https://opxhub-ui.us-east-1.prod.expedia.com/v1/incidents?from_datetime=2021-10-28T05:31:00Z&to_datetime=2021-10-28T16:31:00Z"
                    target="_blank"
                  >
                    /v1/incidents
                  </a>
                </td>
                <td
                  class="row__cell Datatable__cell"
                >
                  <div
                    data-testid="successIcon"
                  >
                    <span
                      class="SVGIcon success-icon"
                    >
                      <svg
                        data-id="SVG_SUCCESS__24"
                        focusable="false"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        >
                          <path
                            d="M2.8 12a9.3 9.3 0 0 1 12.7-8.5 9.3 9.3 0 0 1 5 12 9.3 9.3 0 0 1-12 5A9.3 9.3 0 0 1 2.8 12z"
                          />
                          <path
                            d="M13.2 12.5l-2.9 2.8-2.8-2.8M16.5 9.1l-3.3 3.4"
                          />
                        </g>
                      </svg>
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="status-page-container"
    >
      <h1
        class="page-title"
        data-testid="title"
      >
        Status Page
      </h1>
      <div
        class="Datatable Datatable--density-default"
      >
        <table
          aria-rowcount="2"
          class="Datatable__table Datatable__table--col-fixed"
        >
          <colgroup>
            <col
              style="width: 33.333333333333336%;"
            />
            <col
              style="width: 50%;"
            />
            <col
              style="width: 16.666666666666668%;"
            />
          </colgroup>
          <thead
            class="Datatable__header"
          >
            <tr
              role="row"
            >
              <th
                aria-sort="none"
                class="header__cell Datatable__cell"
                role="columnheader"
                scope="col"
              >
                <div
                  class="header__name"
                >
                  Service Name
                </div>
              </th>
              <th
                aria-sort="none"
                class="header__cell Datatable__cell"
                role="columnheader"
                scope="col"
              >
                <div
                  class="header__name"
                >
                  Endpoint
                </div>
              </th>
              <th
                aria-sort="none"
                class="header__cell Datatable__cell"
                role="columnheader"
                scope="col"
              >
                <div
                  class="header__name"
                >
                  <div>
                    <strong>
                      Status
                       
                    </strong>
                    <div
                      class=""
                      role="button"
                      style="display: inline-block; outline: 0; position: relative;"
                      tabindex="0"
                    >
                       
                      <span
                        class="SVGIcon SVGIcon--16px"
                      >
                        <svg
                          data-id="SVG_INFO__16"
                          focusable="false"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            fill="none"
                            fill-rule="evenodd"
                          >
                            <path
                              d="M7.1 5A.9.9 0 1 1 9 5 .9.9 0 0 1 7 5"
                              fill="currentColor"
                              stroke="none"
                            />
                            <path
                              d="M8 11.2V7.3M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8z"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                            />
                          </g>
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            class="Datatable__body"
          >
            <tr
              class="Datatable__row"
            >
              <td
                class="row__cell Datatable__cell"
              >
                <a
                  class="serviceName"
                  href="https://spawg-dp.expedia.biz/dashboards/eg-fci-data-service/state/"
                  target="_blank"
                >
                  eg-fci-data-service
                </a>
                <a
                  class="serviceName"
                  href="https://github.expedia.biz/eg-reo-opex/eg-fci-data-service"
                  target="_blank"
                >
                  <img
                    alt="github"
                    height="24"
                    title="github"
                    width="24"
                  />
                </a>
              </td>
              <td
                class="row__cell Datatable__cell"
              >
                <a
                  class="serviceName"
                  href="https://opxhub-ui.us-east-1.prod.expedia.com/v1/checkout-failures/sites?from=2021-10-26T16:53:00Z&to=2021-10-26T16:53:06Z"
                  target="_blank"
                >
                  /v1/checkout-failures/sites
                </a>
              </td>
              <td
                class="row__cell Datatable__cell"
              >
                <div
                  data-testid="failIcon"
                >
                  <span
                    class="SVGIcon SVGIcon--24px fail-icon"
                  >
                    <svg
                      data-id="SVG_ALERT__24"
                      focusable="false"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                        fill-rule="evenodd"
                      >
                        <path
                          d="M13 16a1 1 0 1 1-2 0 1 1 0 0 1 2 0"
                          fill="currentColor"
                          stroke="none"
                        />
                        <path
                          d="M12 7.8v5.1m9.3-.9a9.3 9.3 0 1 1-18.6 0 9.3 9.3 0 0 1 18.6 0z"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="Datatable__row"
            >
              <td
                class="row__cell Datatable__cell"
              >
                <a
                  class="serviceName"
                  href="https://spinnaker.expedia.biz/#/applications/opxhub-data-service/executions/"
                  target="_blank"
                >
                  opxhub-data-service
                </a>
                <a
                  class="serviceName"
                  href="https://github.expedia.biz/eg-reo-opex/opxhub-data-service"
                  target="_blank"
                >
                  <img
                    alt="github"
                    height="24"
                    title="github"
                    width="24"
                  />
                </a>
              </td>
              <td
                class="row__cell Datatable__cell"
              >
                <a
                  class="serviceName"
                  href="https://opxhub-ui.us-east-1.prod.expedia.com/v1/incidents?from_datetime=2021-10-28T05:31:00Z&to_datetime=2021-10-28T16:31:00Z"
                  target="_blank"
                >
                  /v1/incidents
                </a>
              </td>
              <td
                class="row__cell Datatable__cell"
              >
                <div
                  data-testid="successIcon"
                >
                  <span
                    class="SVGIcon success-icon"
                  >
                    <svg
                      data-id="SVG_SUCCESS__24"
                      focusable="false"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      >
                        <path
                          d="M2.8 12a9.3 9.3 0 0 1 12.7-8.5 9.3 9.3 0 0 1 5 12 9.3 9.3 0 0 1-12 5A9.3 9.3 0 0 1 2.8 12z"
                        />
                        <path
                          d="M13.2 12.5l-2.9 2.8-2.8-2.8M16.5 9.1l-3.3 3.4"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
